<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

<RelativeLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Canvas">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/TextColor"
        android:text="@string/help_headline"
        android:textSize="24sp"
        android:gravity="center_horizontal"
        android:background="@color/lighterGray"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <RelativeLayout
        android:id="@+id/relLayout"
        android:layout_below="@id/textView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="32dp"
        android:paddingLeft="32dp"
        android:paddingRight="32dp">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="24dp"
            android:text="@string/help_intro"
            android:textColor="@color/TextColor" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginTop="16dp"
        android:layout_below="@id/textView3"
        android:textColor="@color/JadeGray"
        android:textSize="24sp"
        android:text="@string/help_head_singl" />



    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="16dp"
        android:layout_below="@+id/textView4"
        android:layout_alignParentEnd="true"
        android:id="@+id/radioGroup">

        <RadioButton
            android:id="@+id/radioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginBottom="8dp"
            android:textSize="16sp"
            android:text="@string/help_text_single_01" />

        <RadioButton
            android:id="@+id/radioButton2"
            android:layout_width="336dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"

            android:textSize="16sp"
            android:text="@string/help_text_single_02" />

    </RadioGroup>

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginTop="16dp"
            android:layout_below="@id/radioGroup"
            android:textColor="@color/JadeGray"
            android:textSize="24sp"
            android:text="@string/help_head_multi" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView5"
        android:layout_marginTop="16dp"

        android:textSize="16sp"
        android:text="@string/help_text_multi_01" />

    <CheckBox
        android:id="@+id/checkBox2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/checkBox"
        android:layout_marginTop="13dp"
        android:textSize="16sp"
        android:text="@string/help_text_multi_02" />

    <CheckBox
        android:id="@+id/checkBox3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:layout_below="@+id/checkBox2"
        android:layout_marginTop="12dp"
        android:text="@string/help_text_multi_03"/>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/checkBox3"
        android:textColor="@color/TextColor"
        android:layout_marginTop="16dp"
        android:text="@string/help_hint" />


      <Button
          android:id="@+id/button"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_below="@id/textView2"
          android:layout_marginTop="32dp"
          android:layout_marginBottom="32dp"
          android:layout_centerHorizontal="true"
          android:text="@string/help_button_ready"/>

    </RelativeLayout>

</RelativeLayout>

</LinearLayout>

</ScrollView>

</LinearLayout>